welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:11: error: type mismatch;
 found   : Unit
 required: Boolean
    while (a(num)=0) {
                 ^